Update index.html to include social media cards

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mangata & Gallo</title>
+    <meta property="og:title" content="Our Collection">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="logo.png">
+    <meta property="og:url" content="https://reconized.github.io/">
+    <meta property="og:description" content="At Mangata & Gallo, we craft timeless pieces that celebrate love, beauty, and elegance. Discover luxury that lasts a lifetime.">
+    <meta property="og:site_name" content="Mangata & Gallo">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
